# MDAP-Agent

./: .gitignore  CLAUDE.md  README.md  mdap_interactive.py  mdap_repl.py  mdap_runner.py  pyproject.toml  requirements.txt
docs/: ARCHITECTURE.md  CLI_INTERACTIVE.md  MDAP_VOTING.md  ORIGINAL_PLAN.md  USAGE.md
examples/: compare_mdap_vs_single.py  fix_bug.py  implement_feature.py  test_cli_mode.py
mdap/: __init__.py  types.py
mdap/agent/: __init__.py  context.py  loop.py  step.py
mdap/decision/: __init__.py  decider.py  decomposer.py  expander.py  generator.py  validator.py
mdap/execution/: __init__.py  file_ops.py  search.py  test_runner.py  tools.py
mdap/llm/: __init__.py  client.py  client_cli.py
mdap/mdap/: __init__.py  discriminator.py  red_flag.py  voter.py
mdap_cli/: __init__.py  code_view.py  display.py  events.py  prompts.py
mdap_cli/orchestrator/: __init__.py  adapter.py  intent.py  interrupts.py  meta.py  orchestrator.py  resources.py  state.py  tracker.py
mdap_cli/repl/: __init__.py  commands.py  questioner.py  requirement_collector.py  session.py  ui.py
prompts/: decide_next.md  decompose.md  discriminate.md  expand.md  generate.md  validate.md
tests/: __init__.py  conftest.py  test_agent.py  test_decision.py  test_discriminator.py  test_execution.py  test_red_flag.py  test_types.py  test_voter.py
